--- a/UnderTattoos/UnderTattoos/Views/LoginPage.xaml
+++ b/UnderTattoos/UnderTattoos/Views/LoginPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="UnderTattoos.Views.LoginPage"
              BindingContext="{Binding Main, Source={StaticResource Locator}}"
-             Title="UnderGroundTattoo">
+             Title="Login">
     <ContentPage.Content>
         <ScrollView
             BindingContext="{Binding Login}">
